gcc/c-family/ 	PR c++/46890 	* c-common.h (keyword_is_decl_specifier): Declare. 	* c-common.c (keyword_is_decl_specifier): Define. 	(keyword_is_function_specifier): New function.

gcc/cp/
	PR c++/46890
	* parser.c (cp_parser_class_specifier): Fix setting of
	want_semicolon.

gcc/testsuite/
	PR c++/46890
	* g++.dg/parser/semicolon3.C: Adjust.
	* g++.dg/parser/semicolon4.C: New testcase.
	* g++.dg/pr46890.C: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169797 138bc75d-0d04-0410-961f-82ee72b054a4